added navigation and social buttons

--- a/lib/menu/index.html
+++ b/lib/menu/index.html
@@ -46,7 +46,8 @@
 					<div class="sdt_box">
 						<a href="#">Job Board Website</a>
 						<a href="#">Shopping Cart</a>
-						<a href="#">Interactive Maps</a>					</div>
+						<a href="#">Interactive Maps</a>
+					</div>
 				</li>
 			</ul>
 		</div>
